@@ -1402,9 +1402,6 @@ void cairo_renderer_base::process(raster_symbolizer const& sym,
             //TODO -- use cairo matrix transformation for scaling
             if (sym.get_scaling() == "bilinear8"){
                 scale_image_bilinear8<image_data_32>(target,raster->data_, err_offs_x, err_offs_y);
-            } else if (sym.get_scaling() == "bilinear") {
-                // TODO - switch to using scale_image_agg when http://trac.mapnik.org/ticket/759 is fixed
-                scale_image_bilinear_old<image_data_32>(target,raster->data_, err_offs_x, err_offs_y);
             } else {
                 scaling_method_e scaling_method = get_scaling_method_by_name(sym.get_scaling());
                 scale_image_agg<image_data_32>(target,raster->data_, scaling_method, scale_factor, err_offs_x, err_offs_y, sym.calculate_filter_factor());
