@@ -14,6 +14,8 @@ For a complete change history, see the SVN log.
 Mapnik Trunk
 ------------
 
+- SQLite Plugin: optimize io using shared cache and no mutexes (#797)
+
 - Directly link input plugins to libmapnik to avoid having to set dlopen flags from binding languages (#790)
 
 - Throw an error during registration for fonts which Freetype2 does not report a family or style name (r2985).
